--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 # Bot Service URL - DigitalOcean sunucunuzun IP adresi
-REACT_APP_BOT_SERVICE_URL=https://dba8-209-97-183-77.ngrok-free.app
+REACT_APP_BOT_SERVICE_URL=https://ab73-209-97-183-77.ngrok-free.app
